grammar.txt
expr : term((PLUS|MINUS) term)* ##Least Priority 

term : factor((MUL|DIV) factor)* ##Medium Priority

factor : (PLUS | MINUS) factor 

power : atom((POW) power)^ 

atom   : INT | FLOAT ##High Priority 
	   : LPAREN expr RPAREN
